# firehound

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  fetch.py  ids.example.txt  main.py  pipeline.sh  plist_urls.txt  pyproject.toml  summarize.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pypi-publish.yml
docs/: FIREBASE_EXPLAINED.md  IPATOOL_SETUP.md  USAGE.md
docs/architecture/: DATA_MODEL.md  IMPROVEMENTS.md  REFACTORING_PLAN.md
firehound_package/: main.py  mobsf_integration.py  reports.py
mcp/: Dockerfile  providers_itunes.py  pyproject.toml  schemas.py  server.py  service_bundleid.py  test_server.py  utils_ipa.py  utils_scoring.py
scanner/: auditor.py  fetcher.py  models.py  reporter.py  summarizer.py  utils.py
scanner/firebase/: rtdb.py  utils.py
scripts/: audit.py  fetch.py  install_ipatool.sh  search_bundles.py
