[project]
name = "mcp-on-cloudrun"
version = "0.1.0"
description = "Example of deploying a MCP server on Cloud Run"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=0.2.0",
  "httpx[http2]>=0.27.0",
  "pydantic>=2.6.0",
  "rapidfuzz>=3.9.0"
]

[project.scripts]
mcp-server = "mcp.server:main"

[tool.pytest.ini_options]
addopts = "-q"
